Finish up MML presentation

--- a/latex/citations.bib
+++ b/latex/citations.bib
@@ -1658,4 +1658,17 @@ doi = {10.11591/ijece.v11i3.pp2315-2326}
   journal={arXiv preprint arXiv:2111.03600},
   url={https://arxiv.org/abs/2111.03600},
 }
-@inproceedings{choi_2020, Author = {Choi, Woosung and Kim, Minseok and Chung, Jaehwa and Lee, Daewon and Jung, Soonyoung}, Booktitle = {21th International Society for Music Information Retrieval Conference}, Editor = {ISMIR}, Month = {OCTOBER}, Title = {Investigating U-Nets with various intermediate blocks for spectrogram-based singing voice separation.}, Year = {2020}}
+@article{dannasep,
+      title={Danna-Sep: Unite to separate them all},
+      author={Chin-Yun Yu and Kin-Wai Cheuk},
+      year={2021},
+  journal={arXiv preprint arXiv:2112.03752},
+  url={https://arxiv.org/abs/2112.03752},
+}
+@article{choi2021,
+title={KUIELab-MDX-Net: A Two-Stream Neural Network for Music Demixing},
+author={Minseok Kim and Woosung Choi and Jaehwa Chung and Daewon Lee and Soonyoung Jung},
+year={2021},
+  journal={arXiv preprint arXiv:2111.12203},
+  url={https://arxiv.org/abs/2111.12203},
+}
